Resolves: tdf#100272 row ally index is ROW_INVALID

which is < 0 so bad things happen, consider ROW_INVALID/COL_INVALID before
looking for a11y child at that index

(cherry picked from commit 0f32ba56a1e775e8ecd6c827ebd48f7f2fb51c81)
(cherry picked from commit 652026f0e2f9c323229151e854ad6591791e098e)

Change-Id: I16a9d86879e1a894c63932705c056268e98db7aa